Impl [Nuclio] Use project name instead of display name (#675)

--- a/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
+++ b/src/nuclio/projects/new-project-dialog/new-project-dialog.tpl.html
@@ -13,7 +13,7 @@
                 {{ 'functions:PROJECT_NAME' | i18next }}
             </div>
             <div class="field-input">
-                <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState(newProjectForm, 'spec.displayName')">
+                <div class="error" data-ng-show="$ctrl.isShowFieldInvalidState(newProjectForm, 'metadata.name')">
                     {{ 'common:ERROR_MSG.INVALID_INPUTS' | i18next }}
                 </div>
                 <div class="error" data-ng-show="$ctrl.nameTakenError">
@@ -21,14 +21,18 @@
                 </div>
                 <igz-validating-input-field class="nuclio-validating-input"
                                             data-field-type="input"
-                                            data-input-name="spec.displayName"
-                                            data-input-value="$ctrl.data.spec.displayName"
+                                            data-input-name="metadata.name"
+                                            data-input-value="$ctrl.data.metadata.name"
                                             data-is-focused="true"
                                             data-form-object="newProjectForm"
                                             data-validation-is-required="true"
                                             data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                             data-validation-pattern="$ctrl.nameValidationPattern"
-                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PROJECT_NAME' | i18next }}">
+                                            data-placeholder-text="{{ 'functions:PLACEHOLDER.ENTER_PROJECT_NAME' | i18next }}"
+                                            data-uib-tooltip="{{ 'functions:TOOLTIP.PROJECT_FUNCTION_NAME' | i18next }}"
+                                            data-tooltip-popup-delay="500"
+                                            data-tooltip-placement="bottom"
+                                            data-tooltip-append-to-body="true">
                 </igz-validating-input-field>
             </div>
         </div>
