Impl [Nuclio] Various text changes (tooltips, placeholders, etc.)

--- a/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
+++ b/src/nuclio/projects/project/functions/version/function-event-dialog/function-event-dialog.tpl.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="content">
-        <form name="$ctrl.functionEventForm" class="event-form">
+        <form name="$ctrl.functionEventForm" class="event-form" novalidate>
             <div class="field-wrapper">
                 <div class="field-label">
                     {{ 'common:NAME' | i18next }}
