--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="main-section-wrapper">
-            <form name="$ctrl.testEventsForm">
+            <form name="$ctrl.testEventsForm" novalidate>
                 <div class="main-header">
                     <div class="left-side-elements">
                 <span class="igz-icon-hamburger-menu"
