--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -7,7 +7,7 @@
                 data-is-html-enabled="true">
         </igz-more-info>
     </div>
-    <form name="$ctrl.annotationsForm" class="annotations-wrapper">
+    <form name="$ctrl.annotationsForm" class="annotations-wrapper" novalidate>
         <div data-ng-if="$ctrl.annotations.length > 0" class="table-headers">
             <div class="key-header">
                 {{ 'common:KEY' | i18next }}
