--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-basic-settings/version-configuration-basic-settings.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-configuration-basic-settings">
     <div class="title">{{ 'common:BASIC_SETTINGS' | i18next }}</div>
-    <form name="$ctrl.basicSettingsForm" class="basic-settings-wrapper">
+    <form name="$ctrl.basicSettingsForm" class="basic-settings-wrapper" novalidate>
         <div class="row enable-checkbox">
             <input type="checkbox"
                    class="small"
