--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.tpl.html
@@ -11,7 +11,7 @@
 
         <small class="pull-right" data-ng-if="$ctrl.disabled">{{ 'functions:EDITABLE_FOR_EDIT_ONLINE' | i18next }}</small>
     </div>
-    <form name="$ctrl.buildForm" class="build-wrapper">
+    <form name="$ctrl.buildForm" class="build-wrapper" novalidate>
         <div class="igz-row">
             <div class="igz-col-100 build-field">
                 <div class="field-label">
