--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-configuration-environment-variables">
     <div class="title">{{ 'functions:ENVIRONMENT_VARIABLES' | i18next }}</div>
-    <form name="$ctrl.environmentVariablesForm" class="resources-wrapper">
+    <form name="$ctrl.environmentVariablesForm" class="resources-wrapper" novalidate>
         <div class="igz-scrollable-container scrollable-environment-variables"
              data-ng-scrollbars
              data-igz-ng-scrollbars-config="{{$ctrl.igzScrollConfig}}"
