--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -7,7 +7,7 @@
                 data-is-html-enabled="true">
         </igz-more-info>
     </div>
-    <form name="$ctrl.labelsForm" class="labels-wrapper">
+    <form name="$ctrl.labelsForm" class="labels-wrapper" novalidate>
         <div data-ng-if="$ctrl.labels.length > 0" class="table-headers">
             <div class="key-header">{{ 'common:KEY' | i18next }}</div>
             <div class="value-header">{{ 'common:VALUE' | i18next }}</div>
