--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-configuration-logging">
     <div class="title">{{ 'functions:LOGGING' | i18next }}</div>
     <div class="row">
-        <form name="$ctrl.loggingForm" class="logging-wrapper"></form>
+        <form name="$ctrl.loggingForm" class="logging-wrapper" novalidate></form>
     </div>
 </div>
