--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -1,6 +1,6 @@
 <div class="ncl-version-configuration-resources">
     <div class="title">{{ 'common:RESOURCES' | i18next }}</div>
-    <form name="$ctrl.resourcesForm" class="resources-wrapper">
+    <form name="$ctrl.resourcesForm" class="resources-wrapper" novalidate>
         <div class="row">
 
             <div class="igz-row form-row range-inputs-row">
