--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -6,7 +6,7 @@
                 data-trigger="click">
         </igz-more-info>
     </div>
-    <form name="$ctrl.volumesForm" class="volumes-wrapper">
+    <form name="$ctrl.volumesForm" class="volumes-wrapper" novalidate>
 
         <div class="ncl-version-volume">
             <div class="common-table">
