[Services] Presto: Custom Params: Add Advanced section

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -216,7 +216,7 @@
                                             </ncl-key-value-input>
                                         </div>
                                     </div>
-                                    <div class="create-header-button"
+                                    <div class="ncl-create-button create-header-button"
                                          data-ng-click="$ctrl.addNewHeader($event)">
                                         <span class="igz-icon-add-round"></span>
                                         {{ 'functions:CREATE_NEW_HEADER' | i18next }}
