--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-annotations/version-configuration-annotations.tpl.html
@@ -33,7 +33,7 @@
                 </ncl-key-value-input>
             </div>
         </div>
-        <div class="create-annotation-button"
+        <div class="ncl-create-button create-annotation-button"
              data-ng-click="$ctrl.addNewAnnotation($event)">
             <span class="igz-icon-add-round"></span>
             {{ 'functions:CREATE_NEW_ANNOTATION' | i18next }}
