--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-environment-variables/version-configuration-environment-variables.tpl.html
@@ -21,7 +21,7 @@
                 </ncl-key-value-input>
             </div>
         </div>
-        <div class="create-variable-button"
+        <div class="ncl-create-button create-variable-button"
              data-ng-click="$ctrl.addNewVariable($event)">
             <span class="igz-icon-add-round"></span>
             {{ 'functions:CREATE_NEW_ENVIRONMENT_VARIABLE' | i18next }}
