--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -30,7 +30,7 @@
                 </ncl-key-value-input>
             </div>
         </div>
-        <div class="create-label-button"
+        <div class="ncl-create-button create-label-button"
              data-ng-class="{'disabled': $ctrl.isVersionDeployed($ctrl.version)}"
              data-ng-click="$ctrl.addNewLabel($event)">
             <span class="igz-icon-add-round"></span>
