Fix [Nuclio] Invocation URL displayed with port number 0

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -71,10 +71,10 @@
             <div class="igz-col-10 common-table-cell"
                  data-test-id="functions.item-invocation-url"
                  data-ng-show="$ctrl.isFunctionCollapsed"
-                 data-uib-tooltip="{{$ctrl.invocationURL}}"
+                 data-uib-tooltip="{{$ctrl.invocationUrl}}"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="top">
-                <span class="common-table-cell-content">{{$ctrl.invocationURL}}</span>
+                <span class="common-table-cell-content">{{$ctrl.invocationUrl}}</span>
             </div>
             <div class="igz-col-10 common-table-cell"
                  data-test-id="functions.item-invocation-per-sec"
