--- a/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-monitoring/version-monitoring.tpl.html
@@ -8,14 +8,14 @@
                     <span class="monitoring-block-title">
                         {{ 'functions:INVOCATION_URL' | i18next }}:
                     </span>
-                    <a data-ng-if="$ctrl.version.status.state === 'ready' && $ctrl.version.ui.invocationURL !== ''"
+                    <a data-ng-if="($ctrl.version.status.state === 'ready' || $ctrl.version.status.state === 'scaleToZero') && $ctrl.version.ui.invocationUrl !== ''"
                        class="monitoring-invocation-url"
-                       href="{{$ctrl.version.ui.invocationURL}}">
-                        {{$ctrl.version.ui.invocationURL}}
+                       href="{{$ctrl.version.ui.invocationUrl}}">
+                        {{$ctrl.version.ui.invocationUrl}}
                     </a>
-                    <span data-ng-if="$ctrl.version.status.state === 'ready' && $ctrl.version.ui.invocationURL === ''"
+                    <span data-ng-if="($ctrl.version.status.state === 'ready' || $ctrl.version.status.state === 'scaleToZero') && $ctrl.version.ui.invocationUrl === ''"
                           class="monitoring-invocation-field-invalid">N/A</span>
-                    <span data-ng-if="$ctrl.version.status.state !== 'ready'"
+                    <span data-ng-if="$ctrl.version.status.state !== 'ready' && $ctrl.version.status.state !== 'scaleToZero'"
                           class="monitoring-invocation-field-invalid">
                         {{ 'functions:NOT_YET_DEPLOYED' | i18next }}
                     </span>
