--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-version-row/function-version-row.tpl.html
@@ -7,15 +7,9 @@
         <div class="igz-col-25 common-table-cell">
             {{$ctrl.version.name}}
         </div>
-        <div class="igz-col-45 common-table-cell empty"></div>
         <div data-ng-if="$ctrl.isDemoMode()"
-             class="igz-col-10 common-table-cell invocation">
+             class="igz-col-7-5 common-table-cell invocation">
             {{$ctrl.version.invocation}}
-        </div>
-        <div class="igz-col-10 common-table-cell empty"></div>
-        <div data-ng-if="$ctrl.isDemoMode()"
-             class="igz-col-10 common-table-cell created-date">
-            {{$ctrl.version.last_modified | date:"MMM dd, yyyy"}}
         </div>
     </div>
     <div class="common-table-cell actions-menu">
