--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -50,25 +50,37 @@
             <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-{{$ctrl.isDemoMode() ? '15' : '17-5'}}"
                                         data-name="nuclio_processor_handled_events_total-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-type="functions_events"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_processor_handled_events_total"
+                          data-type="functions_events"
                           data-entity="$ctrl.function">
                 </igz-size>
+                <div data-ng-if="$ctrl.function.ui.error.nuclio_processor_handled_events_total">
+                    {{$ctrl.function.ui.error.nuclio_processor_handled_events_total}}
+                </div>
             </igz-element-loading-status>
 
             <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-{{$ctrl.isDemoMode() ? '15' : '17-5'}}"
                                         data-name="nuclio_function_cpu-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-type="functions_cpu"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_cpu"
+                          data-type="functions_cpu"
                           data-entity="$ctrl.function">
                 </igz-size>
+                <div data-ng-if="$ctrl.function.ui.error.nuclio_function_cpu">
+                    {{$ctrl.function.ui.error.nuclio_function_cpu}}
+                </div>
             </igz-element-loading-status>
 
             <igz-element-loading-status class="common-table-cell element-loading-status-wrapper igz-col-{{$ctrl.isDemoMode() ? '15' : '17-5'}}"
                                         data-name="nuclio_function_mem-{{$ctrl.function.metadata.name}}"
                                         data-loading-status-size="small">
-                <igz-size data-type="functions_memory"
+                <igz-size data-ng-if="!$ctrl.function.ui.error.nuclio_function_mem"
+                          data-type="functions_memory"
                           data-entity="$ctrl.function">
                 </igz-size>
+                <div data-ng-if="$ctrl.function.ui.error.nuclio_function_mem">
+                    {{$ctrl.function.ui.error.nuclio_function_mem}}
+                </div>
             </igz-element-loading-status>
         </div>
 
