Impl [General] Add CPU cores chart config
Also, enhance `scale` filter to accept different scales.

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -99,7 +99,7 @@
                         {{ 'functions:INVOCATION' | i18next }}&nbsp;#
                     </div>
                     <div class="igz-col-{{$ctrl.isDemoMode() ? '15' : '17-5'}} common-table-cell">
-                        {{ 'common:CPU' | i18next }}
+                        {{ 'common:CPU_CORES' | i18next }}
                     </div>
                     <div class="igz-col-{{$ctrl.isDemoMode() ? '15' : '17-5'}} common-table-cell">
                         {{ 'common:MEMORY' | i18next }}
