[Nuclio] Invocation count = 0 always

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -35,7 +35,7 @@
             </div>
             <div data-ng-if="$ctrl.isDemoMode()"
                  class="igz-col-10 common-table-cell">
-                {{$ctrl.function.spec.invocation || 0}}
+                {{$ctrl.function.ui.metrics.invocation || 0}}
             </div>
             <div class="igz-col-7-5 common-table-cell">
                 {{$ctrl.runtimes[$ctrl.function.spec.runtime]}}
