[Nuclio] Function status icon hides for small browser resolution

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -19,7 +19,7 @@
                 {{$ctrl.function.metadata.name}}
             </div>
 
-            <div class="igz-col-{{$ctrl.isDemoMode() ? '7-5' : '10'}} common-table-cell">
+            <div class="igz-col-{{$ctrl.isDemoMode() ? '7-5' : '10'}} common-table-cell function-status">
                 {{$ctrl.convertedStatusState}}
                 <div class="status-icon"
                      data-uib-tooltip="{{$ctrl.getTooltip()}}"
