invocation column moved out of demo mode

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -33,8 +33,7 @@
                  class="igz-col-7-5 common-table-cell">
                 {{$ctrl.function.spec.replicas}}
             </div>
-            <div data-ng-if="$ctrl.isDemoMode()"
-                 class="igz-col-10 common-table-cell">
+            <div class="igz-col-10 common-table-cell">
                 {{$ctrl.function.ui.metrics.invocation || 0}}
             </div>
             <div class="igz-col-7-5 common-table-cell">
