--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -82,8 +82,7 @@
                         {{ 'common:REPLICAS' | i18next }}
                         <span class="sort-arrow"></span>
                     </div>
-                    <div data-ng-if="$ctrl.isDemoMode()"
-                         class="igz-col-10 common-table-cell">
+                    <div class="igz-col-10 common-table-cell">
                         {{ 'functions:INVOCATION_PER_SEC' | i18next }}
                     </div>
                     <div class="igz-col-7-5 common-table-cell sortable"
