Function invocation column fixed

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -34,7 +34,7 @@
                 {{$ctrl.function.spec.replicas}}
             </div>
             <div class="igz-col-10 common-table-cell">
-                {{$ctrl.function.ui.metrics.invocation || 0}}
+                {{$ctrl.function.ui.metrics.invocationPerSec || 0}}
             </div>
             <div class="igz-col-7-5 common-table-cell">
                 {{$ctrl.runtimes[$ctrl.function.spec.runtime]}}
