--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-labels/version-configuration-labels.tpl.html
@@ -9,8 +9,22 @@
     </div>
     <form name="$ctrl.labelsForm" class="labels-wrapper" novalidate>
         <div data-ng-if="$ctrl.labels.length > 0" class="table-headers">
-            <div class="key-header">{{ 'common:KEY' | i18next }}</div>
-            <div class="value-header">{{ 'common:VALUE' | i18next }}</div>
+            <div class="key-header">
+                <span data-uib-tooltip-html="$ctrl.keyTooltip"
+                      data-tooltip-placement="right"
+                      data-tooltip-popup-delay="300"
+                      data-tooltip-append-to-body="true">
+                    {{ 'common:KEY' | i18next }}
+                </span>
+            </div>
+            <div class="value-header">
+                <span data-uib-tooltip-html="$ctrl.valueTooltip"
+                      data-tooltip-placement="right"
+                      data-tooltip-popup-delay="300"
+                      data-tooltip-append-to-body="true">
+                    {{ 'common:VALUE' | i18next }}
+                </span>
+            </div>
         </div>
         <div class="igz-scrollable-container scrollable-labels"
              data-ng-scrollbars
@@ -23,6 +37,8 @@
                                      data-row-data="label"
                                      data-item-index="$index"
                                      data-use-type="false"
+                                     data-key-validation-pattern="$ctrl.keyValidationPattern"
+                                     data-value-validation-pattern="$ctrl.valueValidationPattern"
                                      data-is-disabled="$ctrl.isVersionDeployed($ctrl.version)"
                                      data-action-handler-callback="$ctrl.handleAction(actionType, index)"
                                      data-change-data-callback="$ctrl.onChangeData(newData, index)"
