--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-volumes/version-configuration-volumes.tpl.html
@@ -12,7 +12,12 @@
             <div class="common-table">
                 <div data-ng-if="$ctrl.volumes.length > 0" class="common-table-header item-header">
                     <div class="common-table-cell item-name">
+                        <span data-uib-tooltip-html="$ctrl.nameTooltip"
+                            data-tooltip-placement="right"
+                            data-tooltip-popup-delay="300"
+                            data-tooltip-append-to-body="true">
                         {{ 'common:NAME' | i18next }}
+                        </span>
                     </div>
                     <div class="common-table-cell item-class">
                         {{ 'common:TYPE' | i18next }}
@@ -35,6 +40,7 @@
                             <ncl-edit-item class="common-table-cells-container edit-volume-row"
                                            data-item="volume"
                                            data-type="volume"
+                                           data-on-input-value-callback="$ctrl.onInputValueCallback(newItem)"
                                            data-on-submit-callback="$ctrl.editVolumeCallback(item)">
                             </ncl-edit-item>
                         </ncl-collapsing-row>
